google-auth-library

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/node": "^2.12.1",
     "@remix-run/react": "^2.12.1",
     "@remix-run/serve": "^2.12.1",
+    "google-auth-library": "^9.14.1",
     "isbot": "^4.1.0"
   },
   "devDependencies": {
